Fixes scrollbar and workspace moving under header

--- a/src/components/WorkSpace/WorkSpace.scss
+++ b/src/components/WorkSpace/WorkSpace.scss
@@ -106,7 +106,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   padding: 1rem;
-  position: absolute;
+  position: fixed;
   z-index: 12;
 
   font-family: SF Pro Display, sans-serif;
